ping_pong/manifests/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: pong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      containers:
        - name: pong-app
          image: toussyn/ping-pong:v08
          imagePullPolicy: Always
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-app
  template:
    metadata:
      labels:
        app: log-app
    spec:
      volumes: # Define volume
        - name: config-volume
          configMap:
            name: log-config
            items:
              - key: information.txt
                path: info.txt
          
      containers:
      #   - name: log-writer
      #     image: toussyn/writer:v1
      #     imagePullPolicy: Always
      #     volumeMounts:
      #       - mountPath: /usr/src/app/files
      #         name: shared-log
        - name: log-reader
          image: toussyn/reader:v3
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /usr/src/app/files
            name: config-volume

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: pong-ss
  namespace: exercises
spec:
  serviceName: pong-headless
  replicas: 1
  selector:
    matchLabels:
      app: pong-sql
  template:
    metadata:
      labels:
        app: pong-sql
    spec:
      containers:
        - name: pong-sql
          image: postgres
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: sql-storage
          readinessProbe:  # ✓ Added
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 5
            periodSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: sql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 1Gi
